fix page main sliding/overflow

--- a/src/styles/defaultPageStyle.css
+++ b/src/styles/defaultPageStyle.css
@@ -31,7 +31,7 @@ body{
 main{
     margin: 25px 25px 25px 0;
     left:125px;
-    position: relative;
+    position: absolute;
 }
  
 
